2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.c: Bug 309660 - signedness issues
	* configure.in: 2.12.2
	
2005-09-25  Dom Lachowicz <cinamod@hotmail.com>

	* 2.12.1
	
	* rsvg-structure.c:
	* rsvg-shapes.c: Bug 371148 - C89 fixes

	* gdk-pixbuf-loader/Makefile.am
	* gtk-engine/Makefile.am: Bug 316803 - Win32 mingw build fixes

	* moz-plugin/Makefile.am: Bug 316588 - add glib cflags to INCLUDES

	* librsvg.spec.in: Backport from HEAD branch
	
2005-09-22  Rodney Dawes  <dobey@novell.com>

	* configure.in: GNOME_REQUIRE_PKGCONFIG doesn't exist, so remove it
	so that we don't get a weird warning when running configure

2005-09-16  Dom Lachowicz <cinamod@hotmail.com>

	* gdk-pixbuf-loader/io-svg.c: Scan the first 1024 chars for <svg. 100
	Wasn't sufficient for a lot of icon themes.

2005-09-15  Dom Lachowicz <cinamod@hotmail.com>

	* 2.12.0
	
2005-08-29  Christian Schaller <uraeus@gnome.org>

	* Do 2.11.1 release

2005-08-26  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg.[ch]: Unbreak dpi API. See bug 314628
	* test-rsvg.c: Ditto
	* test-display.c: Ditto
	* gdk-pixbuf-loader/io-svg.c: Backport for the GdkPixbufLoader module
	API changes, sot hat it does better pattern recognition.

2005-08-25  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: disabled char nodes. Chopped off namespaces.
	* configure.in: bumped version number to 2.11.0
	
2005-07-21  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-art-mask.c: fixed clip paths having their transform applied twice
	
2005-07-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-marker.c: made markers work again. Took me 3 minutes at most... it's funny how some things that are procratinated about turn out to be easy.

2005-07-20  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg.c: created a text node that isn't being used yet but is proving very useful for type checking