@@ -834,7 +834,7 @@ rsvg_filter_primitive_blend_free (RsvgNode * self)
 static void
 rsvg_filter_primitive_blend_set_atts (RsvgNode * node, RsvgHandle * ctx, RsvgPropertyBag * atts)
 {
-	const char *id = NULL, *value;
+	const char *value;
 	double font_size;
 	RsvgFilterPrimitiveBlend *filter;
 	
@@ -900,7 +900,7 @@ rsvg_filter_primitive_blend_set_atts (RsvgNode * node, RsvgHandle * ctx, RsvgPro
 				filter->super.sizedefaults = 0;
 			}
 			if ((value = rsvg_property_bag_lookup (atts, "id")))
-				rsvg_defs_register_name (ctx->defs, id, &filter->super.super);
+				rsvg_defs_register_name (ctx->defs, value, &filter->super.super);
 		}
 }
 
@@ -1070,7 +1070,7 @@ rsvg_filter_primitive_convolve_matrix_set_atts (RsvgNode * self,
 	gint i, j;
 	guint listlen;
 	double font_size;
-	const char *id = NULL, *value;
+	const char *value;
 	gboolean has_target_x, has_target_y;
 	RsvgFilterPrimitiveConvolveMatrix *filter;
 	
@@ -1169,7 +1169,7 @@ rsvg_filter_primitive_convolve_matrix_set_atts (RsvgNode * self,
 						filter->edgemode = 0;
 				}
 			if ((value = rsvg_property_bag_lookup (atts, "id")))
-				rsvg_defs_register_name (ctx->defs, id, &filter->super.super);
+				rsvg_defs_register_name (ctx->defs, value, &filter->super.super);
 		}
 
 	if (filter->divisor == 0)
@@ -1526,7 +1526,7 @@ rsvg_filter_primitive_gaussian_blur_set_atts (RsvgNode * self,
 											  RsvgHandle * ctx,
 											  RsvgPropertyBag * atts)
 {
-	const char *id = NULL, *value;
+	const char *value;
 	double font_size;
 	RsvgFilterPrimitiveGaussianBlur *filter;
 
@@ -1581,7 +1581,7 @@ rsvg_filter_primitive_gaussian_blur_set_atts (RsvgNode * self,
 													   &filter->sdx,
 													   &filter->sdy);
 			if ((value = rsvg_property_bag_lookup (atts, "id")))
-				rsvg_defs_register_name (ctx->defs, id, &filter->super.super);
+				rsvg_defs_register_name (ctx->defs, value, &filter->super.super);
 		}
 }
 
@@ -1694,7 +1694,7 @@ rsvg_filter_primitive_offset_free (RsvgNode * self)
 static void
 rsvg_filter_primitive_offset_set_atts (RsvgNode * self, RsvgHandle * ctx, RsvgPropertyBag * atts)
 {
-	const char *id = NULL, *value;
+	const char *value;
 	double font_size;
 	RsvgFilterPrimitiveOffset *filter;
 	
@@ -1757,7 +1757,7 @@ rsvg_filter_primitive_offset_set_atts (RsvgNode * self, RsvgHandle * ctx, RsvgPr
 															  1,
 													  font_size);
 			if ((value = rsvg_property_bag_lookup (atts, "id")))
-				rsvg_defs_register_name (ctx->defs, id, &filter->super.super);
+				rsvg_defs_register_name (ctx->defs, value, &filter->super.super);
 		}
 }
 
@@ -1838,7 +1838,7 @@ rsvg_filter_primitive_merge_free (RsvgNode * self)
 static void
 rsvg_filter_primitive_merge_set_atts (RsvgNode * self, RsvgHandle * ctx, RsvgPropertyBag * atts)
 {
-	const char *id = NULL, *value;
+	const char *value;
 	double font_size;
 	RsvgFilterPrimitiveMerge *filter;
 	
@@ -1887,7 +1887,7 @@ rsvg_filter_primitive_merge_set_atts (RsvgNode * self, RsvgHandle * ctx, RsvgPro
 					filter->super.sizedefaults = 0;
 				}
 			if ((value = rsvg_property_bag_lookup (atts, "id")))
-				rsvg_defs_register_name (ctx->defs, id, &filter->super.super);
+				rsvg_defs_register_name (ctx->defs, value, &filter->super.super);
 		}
 }
 
@@ -2043,7 +2043,7 @@ rsvg_filter_primitive_colour_matrix_set_atts (RsvgNode * self, RsvgHandle * ctx,
 	gint type;
 	guint listlen;
 	double font_size;
-	const char *id = NULL, *value;
+	const char *value;
 	RsvgFilterPrimitiveColourMatrix *filter;
 	
 	font_size = rsvg_state_current_font_size (ctx);
@@ -2113,7 +2113,7 @@ rsvg_filter_primitive_colour_matrix_set_atts (RsvgNode * self, RsvgHandle * ctx,
 						type = 0;
 				}
 			if ((value = rsvg_property_bag_lookup (atts, "id")))
-				rsvg_defs_register_name (ctx->defs, id, &filter->super.super);
+				rsvg_defs_register_name (ctx->defs, value, &filter->super.super);
 		}			
 
 	if (type == 0)
